--- a/coctails.html
+++ b/coctails.html
@@ -15,7 +15,9 @@
     <div id="page">
       <header class="header cocktails">
         <div class="header-container">
-          <a href="#" class="header-logo"><img src="img/logo.svg" alt="" /></a>
+          <a href="./index.html" class="header-logo"
+            ><img src="img/logo.svg" alt=""
+          /></a>
           <a href="#" class="header-btn" title="Menu">
             <div class="header-btn-text">
               <span>Menu</span>
@@ -46,7 +48,7 @@
                   x="0px"
                   y="0px"
                   viewBox="0 0 521 215"
-                  style="enable-background: new 0 0 521 215;"
+                  style="enable-background: new 0 0 521 215"
                   xml:space="preserve"
                 >
                   <style type="text/css">
@@ -103,11 +105,11 @@
                       x2="518.8119"
                       y2="230.0245"
                     >
-                      <stop offset="0" style="stop-color: #845a21;"></stop>
-                      <stop offset="0.2817" style="stop-color: #ca9c5e;"></stop>
-                      <stop offset="0.5182" style="stop-color: #93682e;"></stop>
-                      <stop offset="0.8209" style="stop-color: #b98d50;"></stop>
-                      <stop offset="1" style="stop-color: #845a21;"></stop>
+                      <stop offset="0" style="stop-color: #845a21"></stop>
+                      <stop offset="0.2817" style="stop-color: #ca9c5e"></stop>
+                      <stop offset="0.5182" style="stop-color: #93682e"></stop>
+                      <stop offset="0.8209" style="stop-color: #b98d50"></stop>
+                      <stop offset="1" style="stop-color: #845a21"></stop>
                     </linearGradient>
                     <path
                       class="st0"
@@ -123,11 +125,11 @@
                       x2="519.8038"
                       y2="224.7306"
                     >
-                      <stop offset="0" style="stop-color: #845a21;"></stop>
-                      <stop offset="0.2817" style="stop-color: #ca9c5e;"></stop>
-                      <stop offset="0.5182" style="stop-color: #93682e;"></stop>
-                      <stop offset="0.8209" style="stop-color: #b98d50;"></stop>
-                      <stop offset="1" style="stop-color: #845a21;"></stop>
+                      <stop offset="0" style="stop-color: #845a21"></stop>
+                      <stop offset="0.2817" style="stop-color: #ca9c5e"></stop>
+                      <stop offset="0.5182" style="stop-color: #93682e"></stop>
+                      <stop offset="0.8209" style="stop-color: #b98d50"></stop>
+                      <stop offset="1" style="stop-color: #845a21"></stop>
                     </linearGradient>
                     <path
                       class="st1"
@@ -143,11 +145,11 @@
                       x2="520.7633"
                       y2="219.6103"
                     >
-                      <stop offset="0" style="stop-color: #845a21;"></stop>
-                      <stop offset="0.2817" style="stop-color: #ca9c5e;"></stop>
-                      <stop offset="0.5182" style="stop-color: #93682e;"></stop>
-                      <stop offset="0.8209" style="stop-color: #b98d50;"></stop>
-                      <stop offset="1" style="stop-color: #845a21;"></stop>
+                      <stop offset="0" style="stop-color: #845a21"></stop>
+                      <stop offset="0.2817" style="stop-color: #ca9c5e"></stop>
+                      <stop offset="0.5182" style="stop-color: #93682e"></stop>
+                      <stop offset="0.8209" style="stop-color: #b98d50"></stop>
+                      <stop offset="1" style="stop-color: #845a21"></stop>
                     </linearGradient>
                     <path
                       class="st2"
@@ -161,11 +163,11 @@
                       x2="521.9996"
                       y2="213.0122"
                     >
-                      <stop offset="0" style="stop-color: #845a21;"></stop>
-                      <stop offset="0.2817" style="stop-color: #ca9c5e;"></stop>
-                      <stop offset="0.5182" style="stop-color: #93682e;"></stop>
-                      <stop offset="0.8209" style="stop-color: #b98d50;"></stop>
-                      <stop offset="1" style="stop-color: #845a21;"></stop>
+                      <stop offset="0" style="stop-color: #845a21"></stop>
+                      <stop offset="0.2817" style="stop-color: #ca9c5e"></stop>
+                      <stop offset="0.5182" style="stop-color: #93682e"></stop>
+                      <stop offset="0.8209" style="stop-color: #b98d50"></stop>
+                      <stop offset="1" style="stop-color: #845a21"></stop>
                     </linearGradient>
                     <path
                       class="st3"
@@ -181,11 +183,11 @@
                       x2="524.0897"
                       y2="201.858"
                     >
-                      <stop offset="0" style="stop-color: #845a21;"></stop>
-                      <stop offset="0.2817" style="stop-color: #ca9c5e;"></stop>
-                      <stop offset="0.5182" style="stop-color: #93682e;"></stop>
-                      <stop offset="0.8209" style="stop-color: #b98d50;"></stop>
-                      <stop offset="1" style="stop-color: #845a21;"></stop>
+                      <stop offset="0" style="stop-color: #845a21"></stop>
+                      <stop offset="0.2817" style="stop-color: #ca9c5e"></stop>
+                      <stop offset="0.5182" style="stop-color: #93682e"></stop>
+                      <stop offset="0.8209" style="stop-color: #b98d50"></stop>
+                      <stop offset="1" style="stop-color: #845a21"></stop>
                     </linearGradient>
                     <path
                       class="st4"
@@ -201,11 +203,11 @@
                       x2="525.0681"
                       y2="196.6369"
                     >
-                      <stop offset="0" style="stop-color: #845a21;"></stop>
-                      <stop offset="0.2817" style="stop-color: #ca9c5e;"></stop>
-                      <stop offset="0.5182" style="stop-color: #93682e;"></stop>
-                      <stop offset="0.8209" style="stop-color: #b98d50;"></stop>
-                      <stop offset="1" style="stop-color: #845a21;"></stop>
+                      <stop offset="0" style="stop-color: #845a21"></stop>
+                      <stop offset="0.2817" style="stop-color: #ca9c5e"></stop>
+                      <stop offset="0.5182" style="stop-color: #93682e"></stop>
+                      <stop offset="0.8209" style="stop-color: #b98d50"></stop>
+                      <stop offset="1" style="stop-color: #845a21"></stop>
                     </linearGradient>
                     <polygon
                       class="st5"
@@ -220,11 +222,11 @@
                       x2="525.9224"
                       y2="192.0773"
                     >
-                      <stop offset="0" style="stop-color: #845a21;"></stop>
-                      <stop offset="0.2817" style="stop-color: #ca9c5e;"></stop>
-                      <stop offset="0.5182" style="stop-color: #93682e;"></stop>
-                      <stop offset="0.8209" style="stop-color: #b98d50;"></stop>
-                      <stop offset="1" style="stop-color: #845a21;"></stop>
+                      <stop offset="0" style="stop-color: #845a21"></stop>
+                      <stop offset="0.2817" style="stop-color: #ca9c5e"></stop>
+                      <stop offset="0.5182" style="stop-color: #93682e"></stop>
+                      <stop offset="0.8209" style="stop-color: #b98d50"></stop>
+                      <stop offset="1" style="stop-color: #845a21"></stop>
                     </linearGradient>
                     <path
                       class="st6"
@@ -241,11 +243,11 @@
                       x2="526.875"
                       y2="186.9936"
                     >
-                      <stop offset="0" style="stop-color: #845a21;"></stop>
-                      <stop offset="0.2817" style="stop-color: #ca9c5e;"></stop>
-                      <stop offset="0.5182" style="stop-color: #93682e;"></stop>
-                      <stop offset="0.8209" style="stop-color: #b98d50;"></stop>
-                      <stop offset="1" style="stop-color: #845a21;"></stop>
+                      <stop offset="0" style="stop-color: #845a21"></stop>
+                      <stop offset="0.2817" style="stop-color: #ca9c5e"></stop>
+                      <stop offset="0.5182" style="stop-color: #93682e"></stop>
+                      <stop offset="0.8209" style="stop-color: #b98d50"></stop>
+                      <stop offset="1" style="stop-color: #845a21"></stop>
                     </linearGradient>
                     <polygon
                       class="st7"
@@ -260,11 +262,11 @@
                       x2="527.7717"
                       y2="182.2079"
                     >
-                      <stop offset="0" style="stop-color: #845a21;"></stop>
-                      <stop offset="0.2817" style="stop-color: #ca9c5e;"></stop>
-                      <stop offset="0.5182" style="stop-color: #93682e;"></stop>
-                      <stop offset="0.8209" style="stop-color: #b98d50;"></stop>
-                      <stop offset="1" style="stop-color: #845a21;"></stop>
+                      <stop offset="0" style="stop-color: #845a21"></stop>
+                      <stop offset="0.2817" style="stop-color: #ca9c5e"></stop>
+                      <stop offset="0.5182" style="stop-color: #93682e"></stop>
+                      <stop offset="0.8209" style="stop-color: #b98d50"></stop>
+                      <stop offset="1" style="stop-color: #845a21"></stop>
                     </linearGradient>
                     <path
                       class="st8"
@@ -280,11 +282,11 @@
                       x2="528.8651"
                       y2="176.3728"
                     >
-                      <stop offset="0" style="stop-color: #845a21;"></stop>
-                      <stop offset="0.2817" style="stop-color: #ca9c5e;"></stop>
-                      <stop offset="0.5182" style="stop-color: #93682e;"></stop>
-                      <stop offset="0.8209" style="stop-color: #b98d50;"></stop>
-                      <stop offset="1" style="stop-color: #845a21;"></stop>
+                      <stop offset="0" style="stop-color: #845a21"></stop>
+                      <stop offset="0.2817" style="stop-color: #ca9c5e"></stop>
+                      <stop offset="0.5182" style="stop-color: #93682e"></stop>
+                      <stop offset="0.8209" style="stop-color: #b98d50"></stop>
+                      <stop offset="1" style="stop-color: #845a21"></stop>
                     </linearGradient>
                     <polygon
                       class="st9"
@@ -298,11 +300,11 @@
                       x2="529.444"
                       y2="173.2836"
                     >
-                      <stop offset="0" style="stop-color: #845a21;"></stop>
-                      <stop offset="0.2817" style="stop-color: #ca9c5e;"></stop>
-                      <stop offset="0.5182" style="stop-color: #93682e;"></stop>
-                      <stop offset="0.8209" style="stop-color: #b98d50;"></stop>
-                      <stop offset="1" style="stop-color: #845a21;"></stop>
+                      <stop offset="0" style="stop-color: #845a21"></stop>
+                      <stop offset="0.2817" style="stop-color: #ca9c5e"></stop>
+                      <stop offset="0.5182" style="stop-color: #93682e"></stop>
+                      <stop offset="0.8209" style="stop-color: #b98d50"></stop>
+                      <stop offset="1" style="stop-color: #845a21"></stop>
                     </linearGradient>
                     <path
                       class="st10"
@@ -316,11 +318,11 @@
                       x2="529.447"
                       y2="173.2675"
                     >
-                      <stop offset="0" style="stop-color: #845a21;"></stop>
-                      <stop offset="0.2817" style="stop-color: #ca9c5e;"></stop>
-                      <stop offset="0.5182" style="stop-color: #93682e;"></stop>
-                      <stop offset="0.8209" style="stop-color: #b98d50;"></stop>
-                      <stop offset="1" style="stop-color: #845a21;"></stop>
+                      <stop offset="0" style="stop-color: #845a21"></stop>
+                      <stop offset="0.2817" style="stop-color: #ca9c5e"></stop>
+                      <stop offset="0.5182" style="stop-color: #93682e"></stop>
+                      <stop offset="0.8209" style="stop-color: #b98d50"></stop>
+                      <stop offset="1" style="stop-color: #845a21"></stop>
                     </linearGradient>
                     <path
                       class="st11"
@@ -345,11 +347,11 @@
                       x2="542.6284"
                       y2="102.9223"
                     >
-                      <stop offset="0" style="stop-color: #845a21;"></stop>
-                      <stop offset="0.2817" style="stop-color: #ca9c5e;"></stop>
-                      <stop offset="0.5182" style="stop-color: #93682e;"></stop>
-                      <stop offset="0.8209" style="stop-color: #b98d50;"></stop>
-                      <stop offset="1" style="stop-color: #845a21;"></stop>
+                      <stop offset="0" style="stop-color: #845a21"></stop>
+                      <stop offset="0.2817" style="stop-color: #ca9c5e"></stop>
+                      <stop offset="0.5182" style="stop-color: #93682e"></stop>
+                      <stop offset="0.8209" style="stop-color: #b98d50"></stop>
+                      <stop offset="1" style="stop-color: #845a21"></stop>
                     </linearGradient>
                     <path
                       class="st12"
@@ -372,11 +374,11 @@
                       x2="532.5388"
                       y2="156.7677"
                     >
-                      <stop offset="0" style="stop-color: #845a21;"></stop>
-                      <stop offset="0.2817" style="stop-color: #ca9c5e;"></stop>
-                      <stop offset="0.5182" style="stop-color: #93682e;"></stop>
-                      <stop offset="0.8209" style="stop-color: #b98d50;"></stop>
-                      <stop offset="1" style="stop-color: #845a21;"></stop>
+                      <stop offset="0" style="stop-color: #845a21"></stop>
+                      <stop offset="0.2817" style="stop-color: #ca9c5e"></stop>
+                      <stop offset="0.5182" style="stop-color: #93682e"></stop>
+                      <stop offset="0.8209" style="stop-color: #b98d50"></stop>
+                      <stop offset="1" style="stop-color: #845a21"></stop>
                     </linearGradient>
                     <path
                       class="st13"
@@ -419,7 +421,7 @@
                       x="0px"
                       y="0px"
                       viewBox="0 0 155.139 155.139"
-                      style="enable-background: new 0 0 155.139 155.139;"
+                      style="enable-background: new 0 0 155.139 155.139"
                       xml:space="preserve"
                     >
                       <g>
@@ -444,7 +446,7 @@
                       x="0px"
                       y="0px"
                       viewBox="0 0 28 28"
-                      style="enable-background: new 0 0 28 28;"
+                      style="enable-background: new 0 0 28 28"
                       xml:space="preserve"
                     >
                       <g>
@@ -483,7 +485,7 @@
                       x="0px"
                       y="0px"
                       viewBox="0 0 512 512"
-                      style="enable-background: new 0 0 512 512;"
+                      style="enable-background: new 0 0 512 512"
                       xml:space="preserve"
                     >
                       <g>
@@ -632,9 +634,7 @@
                       </div>
                       <ul>
                         <li>1 oz Zaya Rum</li>
-                        <li>
-                          1/2 oz White Rum
-                        </li>
+                        <li>1/2 oz White Rum</li>
                         <li>3/4 oz Lime Juice</li>
                         <li>2 Blackberries</li>
                         <li>1 - 2 Raspberries</li>
@@ -1035,7 +1035,7 @@
             </div>
           </div>
           <div class="footer-main">
-            <a href="#" class="footer-logo">
+            <a href="./index.html" class="footer-logo">
               <img
                 class="img-full fade-up-in"
                 data-lazy="img/logo.svg"
@@ -1068,7 +1068,7 @@
                       x="0px"
                       y="0px"
                       viewBox="0 0 155.139 155.139"
-                      style="enable-background: new 0 0 155.139 155.139;"
+                      style="enable-background: new 0 0 155.139 155.139"
                       xml:space="preserve"
                     >
                       <g>
@@ -1093,7 +1093,7 @@
                       x="0px"
                       y="0px"
                       viewBox="0 0 28 28"
-                      style="enable-background: new 0 0 28 28;"
+                      style="enable-background: new 0 0 28 28"
                       xml:space="preserve"
                     >
                       <g>
@@ -1132,7 +1132,7 @@
                       x="0px"
                       y="0px"
                       viewBox="0 0 512 512"
-                      style="enable-background: new 0 0 512 512;"
+                      style="enable-background: new 0 0 512 512"
                       xml:space="preserve"
                     >
                       <g>
